<resources>
    <!-- General -->
    <string name="app_name">Vk-App</string>
    <integer name="com_vk_sdk_AppId">6245606</integer>

    <!-- News item -->
    <string name="title_news">News</string>
    <string name="image_repost">Repost</string>
    <string name="reposted_text">Reposted</string>

    <!-- Fonts -->
    <string name="font_heart">&#xE87D;</string>
    <string name="font_comment">&#xE0B9;</string>
    <string name="font_repost">&#xE050;</string>

    <!-- Drawer items -->
    <string name="drawer_logout">Logout</string>
    <string name="drawer_item_news">News</string>
    <string name="drawer_item_my_posts">My Posts</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_section">Group</string>
    <string name="drawer_item_members">Members</string>
    <string name="drawer_item_topics">Topics</string>
    <string name="drawer_item_info">Info</string>
    <string name="drawer_item_group_rules">Group Rules</string>

    <!-- Screen names -->
    <string name="screen_name_opened_post">Post</string>
    <string name="screen_name_comments">Comments</string>
    <string name="screen_name_opened_comment">Comment</string>

    <!-- Info items -->
    <string name="info_status">Статус</string>
    <string name="info_description">Описание</string>
    <string name="info_site">Веб-сайт</string>
    <string name="info_contacts">Контакты</string>
    <string name="info_links">Ссылки</string>

    <!-- Attachments -->
    <string name="audio">Audio</string>
    <string name="video_views_count">просмотров</string>
    <string name="video">Video</string>
    <string name="video_icon">Video icon</string>
    <string name="doc">Doc</string>
    <string name="doc_image">Doc image</string>
    <string name="image">Image</string>
    <string name="link">Link</string>

    <!-- Messages -->
    <string name="new_message_title">Новая запись</string>
    <string name="add_message_text">Добавьте текст сообщения</string>
    <string name="message_not_published">Запись не опубликована. Возможно, у вас нет прав для публикации на стене группы</string>
    <string name="loading_completed">Загружено</string>
    <string name="loading_failed">Ошибка загрузки. Убедитесь, что имя файла не содержит пробелы и кириллицу</string>
</resources>
