<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDefaultWhite">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="0dp">

        <RelativeLayout
            android:id="@+id/rvTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:lines="1"
                    android:text="@string/info_status"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvStatus"
                    android:layout_marginTop="4dp"
                    android:autoLink="web"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View android:layout_below="@id/rvStatus"
                style="@style/Divider" />

            <RelativeLayout
                android:id="@+id/rvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvStatus"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:lines="1"
                    android:text="@string/info_description"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvDescriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvDescription"
                    android:layout_marginTop="4dp"
                    android:autoLink="web"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="16sp" />

            </RelativeLayout>

            <View android:layout_below="@id/rvDescription"
                style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rvDescription"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/tvSite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:lines="1"
                    android:text="@string/info_site"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvSiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvSite"
                    android:layout_marginTop="4dp"
                    android:autoLink="web"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>