<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDefaultWhite">

    <RelativeLayout
        android:id="@+id/rvAttachmentVideo"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        card_view:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:layout_below="@+id/rvVideo">

                <ImageView
                    android:id="@+id/ivAttachmentVideoPicture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/colorAccent"
                    android:contentDescription="@string/video" />

                <ImageView
                    android:background="@color/colorDivider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_play_circle_outline_white_48dp"
                    android:scaleType="center"
                    android:contentDescription="@string/video_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rvVideo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="top"
                android:background="#ffffff">

                <ImageView
                    android:id="@+id/ivAttachmentImageIcon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_local_movies_black_36dp"
                    android:tint="@color/colorAccent"
                    android:contentDescription="@string/video" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@id/ivAttachmentImageIcon"
                    android:layout_toEndOf="@id/ivAttachmentImageIcon">

                    <TextView
                        android:id="@+id/tvAttachmentVideoTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:maxLines="2"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="12sp" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/tvViewsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_toRightOf="@+id/tvViewsCount"
                    android:layout_toEndOf="@+id/tvViewsCount"
                    android:text="@string/video_views_count"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvVideoDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:singleLine="true"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>