<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rvRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefaultWhite"
    android:clickable="false"
    android:focusable="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorDefaultWhite"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingBottom="60dp"
            android:scrollbars="vertical"
            tools:layout_height="300dp" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/rvFooter"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible">
        <!-- android:elevation="8dp" -->

        <RelativeLayout
            android:id="@+id/rvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:lines="1"
                android:textColor="#909090"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:text="Date" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="visible"
            android:layout_marginBottom="6dp">

            <TextView
                android:id="@+id/tvCommentsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:lines="1"
                android:text="@string/font_comment"
                android:textColor="@color/colorIcon"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvCommentsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tvCommentsIcon"
                android:layout_toRightOf="@+id/tvCommentsIcon"
                android:gravity="center_vertical"
                android:lines="1"
                android:textColor="#909090"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:text="2135" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rvReposts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/comments"
            android:layout_toEndOf="@+id/comments"
            android:layout_marginBottom="6dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/tvRepostsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center_vertical"
                android:lines="1"
                android:text="@string/font_repost"
                android:textColor="@color/colorIcon"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvRepostsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tvRepostsIcon"
                android:layout_toRightOf="@+id/tvRepostsIcon"
                android:gravity="center_vertical"
                android:lines="1"
                android:textColor="#909090"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:text="10"  />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rvLinks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="6dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/rvReposts"
            android:layout_toEndOf="@id/rvReposts">

            <TextView
                android:id="@+id/tvLikesIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:lines="1"
                android:text="@string/font_heart"
                android:textColor="@color/colorIcon"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvLikesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tvLikesIcon"
                android:layout_toRightOf="@+id/tvLikesIcon"
                android:lines="1"
                android:textColor="#909090"
                android:textSize="13sp"
                android:textStyle="bold"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>